--- a/frontend/src/app/signup/signup.component.html
+++ b/frontend/src/app/signup/signup.component.html
@@ -1,3 +1,43 @@
-<p>
-  signup works!
-</p>
+<div class="container">
+  <h1>Add New User</h1>
+  <div class="row">
+    <div class="col-md-6">
+      <form (ngSubmit)="saveuser()" #userForm="ngForm">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input type="text" class="form-control" [(ngModel)]="user.name" name="name" required>
+        </div>
+        <div class="form-group">
+          <label for="name">Address</label>
+          <input type="text" class="form-control" [(ngModel)]="user.address" name="address" required>
+        </div>
+        <div class="form-group">
+          <label for="name">City</label>
+          <input type="text" class="form-control" [(ngModel)]="user.city" name="city" required>
+        </div>
+        <div class="form-group">
+          <label for="name">Phone</label>
+          <input type="phone" class="form-control" [(ngModel)]="user.phone" name="phone" required>
+        </div>
+        <div class="form-group">
+          <label for="name">Email</label>
+          <input type="email" class="form-control" [(ngModel)]="user.email" name="email" required>
+        </div>
+         <div class="form-group">
+          <label for="name"> Roll Requested </label>
+				<select name="profile" class="form-control" [(ngModel)]="user.rollRquested">
+    			<option value="admin" >admin</option>
+    			<option value="vender">vender</option>
+    			<option value="customer">customer</option>
+    			<option value="tester">tester</option> 
+    	
+		</select>            
+		</div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-success" [disabled]="!userForm.form.valid">Save</button>
+        </div>
+       
+      </form>
+    </div>
+  </div>
+</div>
