--- a/frontend/src/app/contact/contact.component.html
+++ b/frontend/src/app/contact/contact.component.html
@@ -1,26 +1,27 @@
 <div class="container">
-  <h1>Contact List</h1>
+  <h1>Welcome {{user}}</h1>
+ 
+ <div > 
+ <input type="button" class="btn pull-right" (click)="userList()" name="newFriend" value="Create Friend">
+ </div>
+   
+  <div>
+  <h2>Friend List</h2>
+  </div>
+  
   <table class="table">
     <thead>
       <tr>
         <th>Name</th>
-        <th>City</th>
-        <th>Email</th>
-        <th>Action</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let contact of contacts">
         <td>{{ contact.name }}</td>
-        <td>{{ contact.city }}</td>
-        <td>{{ contact.email }}</td>
         <td><a [routerLink]="['/contact-detail', contact.id]">Show Detail</a></td>
       </tr>
     </tbody>
   </table>
-  <h1>Contact List
-    <a [routerLink]="['/contact-create']" class="btn btn-default btn-lg">
-      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-    </a>
-  </h1>
+ 
+ 
 </div>
