--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -10,25 +10,21 @@
 		    <form class="login-form">
   <div class="form-group">
     <label for="exampleInputEmail1" class="text-uppercase">Username</label>
-    <input type="text" class="form-control" placeholder="">
+    <input type="text" name="username" class="form-control" placeholder="" [(ngModel)]="user.name">
     
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1" class="text-uppercase">Password</label>
-    <input type="password" class="form-control" placeholder="">
+    <input type="password" name="password" class="form-control" placeholder="" [(ngModel)]="user.password">
   </div>
   
   
     <div class="form-check">
-    <label class="form-check-label">
-      <input type="checkbox" class="form-check-input">
-      <small>Remember Me</small>
-    </label>
-    <button type="submit" class="btn btn-login float-right">Submit</button>
+    <button type="submit" name="login" class="form-control" (click)="validateUser();">Submit</button>
   </div>
 
  <div class="form-group">
-    <input type="button" class="form-control" placeholder="Sign Up" (click)="btnClick();">
+    <input type="button" name="signup" class="form-control" value="Sign Up" placeholder="Sign Up" (click)="btnClick();">
   </div>
 </form>
 	</div>
