--- a/frontend/src/app/signup/signup.component.html
+++ b/frontend/src/app/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Add New User</h1>
+  <h1>Hi {{abc}}, Please registered yourself here Before Login</h1>
   <div class="row">
     <div class="col-md-6">
       <form (ngSubmit)="saveuser()" #userForm="ngForm">
@@ -33,6 +33,10 @@
     	
 		</select>            
 		</div>
+		<div class="form-group">
+          <label for="name">Password</label>
+          <input type="password" class="form-control" [(ngModel)]="user.password" name="password" required>
+        </div>
         <div class="form-group">
           <button type="submit" class="btn btn-success" [disabled]="!userForm.form.valid">Save</button>
         </div>
